# px_cpp

./: .gitignore  .gitmodules  Makefile  alloc.cc  alloc.hh  main.cc  tracer_new.cc  tracer_new.hh
.github/workflows/: github-actions-demo.yml
Common/: Allocator.hh  Arena.hh  ArenaAllocator.hh  ArenaUtils.h  ArenaWithFreeLists.hh  CurrentMemoryTracker.cc  CurrentMemoryTracker.hh  CurrentThread.cc  CurrentThread.hh  Makefile  MemoryTracker.cc  MemoryTracker.hh  MemoryTrackerBlockerInThread.cc  MemoryTrackerBlockerInThread.hh  ProfileEvents.cc  ProfileEvents.hh  ThreadStatus.cc  ThreadStatus.hh  common  log.txt  main.cc  memcpySmall.hh  memory.hh  mremap.cc  new_delete.cc  test_main copy.i  test_main.c  test_main.cc  test_main.i
Compression/: CompressionInfo.hh
StringUtils/: Makefile  StringUtils  StringUtils.cc  StringUtils.hh
allocator/: Allocator.cc  Allocator.hh  Makefile  allocator  main.cc
base/: BitHelpers.h  Cpuid.hh  Makefile  ProfileEvents.cc  RateLimiter.hh  StringRef.cc  StringRef.hh  Throttler.cc  Throttler.hh  TokenBucket.hh  VariableContext.hh  base  decimal.hh  defines.hh  extended_types.h  getThreadId.cc  getThreadId.hh  hex.cc  hex.hh  intExp.hh  main.cc  noncopyable.hh  scope_guard.hh  sleep.cc  stopwatch.hh  terminalColors.cc  terminalColors.hh  throwError.hh  types.hh  unaligned.hh  unit.hh  wide_integer.hh  wide_integer_impl.hh  wide_integer_to_string.hh
contrib/: CMakeLists.txt
contrib/cityhash102/: CMakeLists.txt
contrib/cmake/: cxx.cmake  unwind.cmake
contrib/cmake/linux/: default_libs.cmake
contrib/glibc-compatibility/: CMakeLists.txt
contrib/google-benchmark-cmake/: CMakeLists.txt
contrib/googletest-cmake/: CMakeLists.txt
contrib/harmful/: CMakeLists.txt
contrib/jemalloc-cmake/: CMakeLists.txt
contrib/libcxx-cmake/: CMakeLists.txt
contrib/libcxxabi-cmake/: CMakeLists.txt  CMakeLists_bk.txt
contrib/libunwind-cmake/: CMakeLists.txt
contrib/liburing-cmake/: CMakeLists.txt
contrib/src/: test.cc
cpp_hpc/: Makefile  branch_prediction  branch_prediction.cc  cpp_hpc  mca_test  mca_test.cc  perf_branch1  perf_branch1.cc  superscalar  superscalar.cc
cpp_hpc/bm_base/: Makefile  StringRef  StringRef.asm  StringRef.cc
dl_iterate_phdr/: Makefile  dl_iterate_phdr  main.cc
false_sharing/: Makefile  main.cc
format/: Makefile  format  main.cc
get_executable_path/: Makefile  get_executable_path  main.cc
get_sys_info/: Makefile  MemoryStatisticsOS.cc  MemoryStatisticsOS.hh  getExecutablePath.hh  getMappedArea.cc  getMappedArea.hh  get_sys_info  main.cc
hash/: Makefile  SipHash.hh  main.cc  siphash
hex/: Makefile  hex  main.cc
inline_variable/: Makefile  main.cc  notmain.cc  notmain.hh
io_uring/: Makefile  io_uring  liburing.so.2  main.cc
lib/contrib/: libgtest.so.1.0.0
lingjun_cpp_codetest/: Makefile  lingjun_cpp_codetest  log.txt  main.cc  md_csv_parser.cc  md_csv_parser.hh  md_hdf5_parser.cc  md_parser.hh  order_book.cc  order_book.hh  readme.md  valgrind.txt
lingjun_cpp_coding_test/: .gitmodules  CMakeLists.txt  CodingTest.txt  callgrind.out.2406  readme.md
lingjun_cpp_coding_test/contrib/: CMakeLists.txt
lingjun_cpp_coding_test/src/: main.cc
lingjun_cpp_coding_test/src/md_parser/: md_csv_parser.cc  md_csv_parser.hh  md_hdf5_parser.hh  md_parser.hh
lingjun_cpp_coding_test/src/order_book/: order_book.cc  order_book.hh
lingjun_cpp_coding_test/tests/: CMakeLists.txt  test_on_book_change.cc
lock_free_queue/: Makefile  atomicops.h  lock_free_queue  main.cc
longest_sub_str/: Makefile  main.cc
mem_pool/: Makefile  debug.hh  dtypes.hh  gc-pages.cc  gc.cc  gc.hh  main.cc  mem_pool.cc  mem_pool.hh  platform.hh
mem_tracer/: Makefile  main.cc  mem_tracer  tracer_malloc.cc  tracer_malloc.hh  tracer_new.cc  tracer_new.hh
memcpy/: CMakeLists.txt
noexcept/: Makefile  main.cc  noexcept_false.hh  noexcept_true.hh
parse_md/: Makefile  SH  SZ  create_md.cc  create_md.hh  main.cc  parse_md  parse_md.cc  parse_md.hh  readme
read_write_buffer/: BufferBase.hh  BufferWithOwnMemory.hh  LimitReadBuffer.cc  LimitReadBuffer.hh  Makefile  ReadBuffer.hh  ReadBufferFromFile.cc  ReadBufferFromFile.hh  ReadBufferFromFileBase.cc  ReadBufferFromFileBase.hh  ReadBufferFromFileDecorator.cc  ReadBufferFromFileDecorator.hh  ReadBufferFromFileDescriptor.cc  ReadBufferFromFileDescriptor.hh  ReadBufferFromIStream.cc  ReadBufferFromIStream.hh  ReadBufferFromMemory.cc  ReadBufferFromMemory.hh  ReadBufferFromString.hh  ReadHelpers.cc  ReadHelpers.hh  SeekableReadBuffer.hh  VarInt.hh  WriteBuffer.hh  WriteBufferFromFile.cc  WriteBufferFromFile.hh  WriteBufferFromFileBase.cc  WriteBufferFromFileBase.hh  WriteBufferFromFileDescriptor.cc  WriteBufferFromFileDescriptor.hh  main.cc  my_concepts.hh  read_write_buffer  read_write_config.hh
restrict/: Makefile  main.cc  restrict
round_to_tick/: Makefile  main.cc  test
shared_ptr/: Makefile  main.cc  shared_ptr.hh
spectre/: Makefile  main.cc
sse/: Makefile  main.cc  mm_cmpeq_epi8.hh
str2d/: Makefile  main.cc
swap_list/: Makefile  main.cc
template/: Makefile  any.hh  array.hh  main.cc  template  type_traits.hh
test/: Makefile  main.cc  test
test_NewAppsOnOldGlibc/: Makefile  main.cc  memcpy.cc  test_NewAppsOnOldGlibc
test_critical_problem/: Makefile  base.hh  derive.cc  other.hh
test_dlopen/: Makefile  func.cc  func.hh  main.cc
test_isystem/: Makefile  main.cc  main.i  test.cc  test_isystem  test_isystem.I  test_isystem.asm  test_isystem.isystem
test_isystem/test1/: test1.hh
test_isystem/test2/: test2.hh
test_jemalloc/: Makefile  main.cc  test_jemalloc
test_lingjun/: Makefile  main.cc  test_lingjun
test_long_double/: Makefile  main.cc
test_non_virtual_base_class/: README  base.cc  derive.hh  main.cc  other.cc
test_optional/: Makefile  main.cc
test_stack_size/: Makefile  main.cc  test_stack_size
test_template/: Makefile  array.hh  main.cc  test_template  type_traits.hh
test_using/: Makefile  main.cc
tracer_new/: Makefile  debug.hh  main.cc  tracer_malloc.cc  tracer_malloc.hh  tracer_new.cc  tracer_new.hh
vector_foreach/: Makefile  main.cc
(+3 files in other folders)
